{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 29,
  "lineage": "d7ac8912-6bad-7015-4205-d9f174492e15",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400209161990:security-group/sg-01d7f205",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01d7f205",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-878411fa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400209161990:vpc/vpc-878411fa",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-edbadc82",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4f2b1d35",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-878411fa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-35d9c94b",
            "owner_id": "400209161990",
            "state": "available",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instances[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:400209161990:instance/i-02b8dc713a9b55683",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b8dc713a9b55683",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04daed3a57aefb3e8",
            "private_dns": "ip-172-31-71-106.ec2.internal",
            "private_ip": "172.31.71.106",
            "public_dns": "ec2-34-239-156-75.compute-1.amazonaws.com",
            "public_ip": "34.239.156.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb702008db1063b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-20220107231552244500000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b68506",
            "tags": {
              "Name": "dev-vm-1",
              "environment": "dev",
              "owners": "NOC"
            },
            "tags_all": {
              "Name": "dev-vm-1",
              "environment": "dev",
              "owners": "NOC"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-vm-1"
            },
            "vpc_security_group_ids": [
              "sg-01bec3802bdd8f25f"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_subnet_ids.all",
            "data.aws_vpc.default",
            "module.security_grp.aws_security_group.this",
            "module.security_grp.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances[\"2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:400209161990:instance/i-06a9abb7c02c4907e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a9abb7c02c4907e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00490430813bede01",
            "private_dns": "ip-172-31-34-251.ec2.internal",
            "private_ip": "172.31.34.251",
            "public_dns": "ec2-54-165-63-156.compute-1.amazonaws.com",
            "public_ip": "54.165.63.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e25c8c2288d273f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-20220107231552244500000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-37fd8768",
            "tags": {
              "Name": "dev-vm-2",
              "environment": "dev",
              "owners": "NOC"
            },
            "tags_all": {
              "Name": "dev-vm-2",
              "environment": "dev",
              "owners": "NOC"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-vm-2"
            },
            "vpc_security_group_ids": [
              "sg-01bec3802bdd8f25f"
            ]
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_grp.aws_security_group.this",
            "module.security_grp.aws_security_group.this_name_prefix",
            "data.aws_ami.amzlinux2",
            "data.aws_subnet_ids.all"
          ]
        }
      ]
    },
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "elb-logs-perfect-foal",
                "enabled": true,
                "interval": 60
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:400209161990:loadbalancer/elb-example",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-example-2091236446.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-example",
            "idle_timeout": 400,
            "instances": [
              "i-02b8dc713a9b55683",
              "i-06a9abb7c02c4907e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-example",
            "security_groups": [
              "sg-01d7f205"
            ],
            "source_security_group": "400209161990/default",
            "source_security_group_id": "sg-01d7f205",
            "subnets": [
              "subnet-08b68506",
              "subnet-37fd8768",
              "subnet-3ac14d0b",
              "subnet-8d3a7dac",
              "subnet-ab96efcd",
              "subnet-baafa6f7"
            ],
            "tags": {
              "Name": "elb-example",
              "environment": "dev",
              "owners": "NOC"
            },
            "tags_all": {
              "Name": "elb-example",
              "environment": "dev",
              "owners": "NOC"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.logs",
            "data.aws_elb_service_account.this",
            "data.aws_iam_policy_document.logs",
            "data.aws_security_group.default",
            "data.aws_subnet_ids.all",
            "data.aws_vpc.default",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400209161990:security-group/sg-01bec3802bdd8f25f",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC, egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bec3802bdd8f25f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg-20220107231552244500000003",
            "name_prefix": "ec2-sg-",
            "owner_id": "400209161990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg",
              "environment": "dev",
              "owners": "NOC"
            },
            "tags_all": {
              "Name": "ec2-sg",
              "environment": "dev",
              "owners": "NOC"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-878411fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_grp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3720166457",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01bec3802bdd8f25f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_grp.aws_security_group.this",
            "module.security_grp.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-657373910",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01bec3802bdd8f25f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_grp.aws_security_group.this",
            "module.security_grp.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2443503459",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01bec3802bdd8f25f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_grp.aws_security_group.this",
            "module.security_grp.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}